--- a/index.html
+++ b/index.html
@@ -1,83 +1,55 @@
-<!DOCTYPE html>
+DOCTYPE html>
+
 <html>
+	<head>
+		<title> Le Wagon </title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+
+    <img src="backgrounf.jpeg">
+
+	<body>
+
+		<div class="banner">
+			<div class="container">
+				<h1> Your first UI kit </h1>
+				<h2>Let's learn how to code components in CSS. </h2>
+				<a href="https://www.lewagon.com/fr" class="btn-blue">Start now </a>
+			</div>
+		</div>
 
 
- <head>
-	<title>Eliott Lemaire's Profile</title>
-    <meta name="description" content="This is the profile of Eliott">
-    <meta charset="UTF-8" >
-    <script src="https://kit.fontawesome.com/3eeee27207.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
- </head>
+		<div class="container">	
+			
 
- <body>
-  
-    
-  <div class="container" 
+			<h2>1. Container </h2>
+			<p> 
+			Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un imprimeur anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
+			</p>
 
-        style="
-        width: 700px;
-        margin: 50px auto;   
-        ">
+			<h2>2. Avatar </h2>
+			<img class="avatar" src="images/lewagon1.jpg" alt="Le Wagon">
 
-       <div style="background: white;
-         padding: 60px;
-         margin: 50px;
-         box-shadow: 0px 10px 30px rgba(0,0,0,0.1)
-         border-radius: 5px;"> 
-       	
-         <h1>Hello, I'm Eliott !</h1>
-          <img src="images/profile-picture.jpg" id="profilepicture" alt="Eliott Lemaire">
-          <p>
-          I love music and rap, passionate about travel, and I play tennis and guitar on multiple occasions.
-          </p>
-           <a href="https://www.facebook.com/eliott.lemaire.35" target="_blank">
-   	        <i class="fab fa-facebook"></i>
-           </a>
-       </div>
-       <div> 
-         <h2>Rap/music</h2>
-          <p>I have an Instagram page for rap and I've been three years to a Conservatory.  
-          </p>
-           <a href="https://www.instagram.com/megl.io/" target="_blank">
-             <i class="fab fa-instagram"></i>	
-           </a>
-       </div> 
-       <div>
-         <h2>Travel
-         </h2>
-          <p>I've been to plenty of countries in nearly all continents and I love multiculturality and diversity, as well as meeting new people.
-          </p>
-       </div>
-       <div>
-         <h2>Sport</h2>
-          <p>Not only I play tennis, but I also am keen on playing football as well as basket, volley, rugby...
-          </p>
-       </div>
-       <div>
-         <h2>Follow me on my principal Instagram page and my Linkedin !
-         </h2>
+			<h2>3. Button </h2>
+			<a href="https://www.lewagon.com/fr" class="btn-blue">Start now </a>
 
-         <ul>
-   	       <li>
-   		     <a href="https://www.instagram.com/eliottlmr/">
-   		       <i class="fab fa-instagram"></i> 	
-   		    </a>
-   	       </li>
-           <li>
-             <a href="https://www.linkedin.com/in/eliott-lemaire-9a0252150/">
-               <i class="fab fa-linkedin"></i>
-             </a> 
-           </li>
+			<h2>4. Le Wagon's Campuses</h2>
 
-         </ul>
-      </div>
-  </div>
- </body>
+			<div class="cards">
+				<div class="card">
+					<img src="images/paris.jpeg" alt="Le Wagon Paris">
+					<h3> Paris </h3>
+				</div>
+				<div class="card">
+					<img src="images/shanghai.jpeg" alt="Le Wagon Shanghai">
+					<h3> Shanghai </h3>
+				</div>
+				<div class="card">
+					<img src="images/rio.jpeg" alt="Le Wagon Rio">
+					<h3> Rio </h3>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
-
-
-
-
-
